chore: config fixes after renaming

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "outDir": "temp",
     "paths": {
-      "@nth-cloud/ng-mentions": ["../src/index"]
+      "ng-mentionz": ["../src/index"]
     }
   },
   "include": [
