--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nth-cloud/ng-mentions",
+  "name": "ng-mentionz",
   "version": "2.0.1",
   "description": "Angular components & directives for customizable mentions",
   "keywords": [
